<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.jowgrin</groupId>
    <artifactId>imposingpdf</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.release>25</maven.compiler.release>

        <javafx.version>25</javafx.version>
        <pdfbox.version>3.0.5</pdfbox.version>
    </properties>

    <dependencies>

        <!-- JavaFX Controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Apache PDFBox -->
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>${pdfbox.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- Compile with Java 25 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>25</release>
                </configuration>
            </plugin>

            <!-- Run JavaFX application -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>

                <configuration>
                    <mainClass>io.github.jowgrin.imposingpdf.MainView</mainClass>
                	<options>
                		<option>--enable-native-access=javafx.graphics,ALL-UNNAMED</option>
                		<option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8000</option>
            		</options>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>